# Race_Simulator

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: air_vehicle.h  broom.h  camel.h  centaur.h  eagle.h  ground_vehicle.h  magic_carpet.h  race.h  rover_boots.h  scene_manager.h  speedster_camel.h  vehicle.h
lib/src/: air_vehicle.cpp  broom.cpp  camel.cpp  centaur.cpp  eagle.cpp  ground_vehicle.cpp  magic_carpet.cpp  race.cpp  rover_boots.cpp  scene_manager.cpp  speedster_camel.cpp  vehicle.cpp
